# tool_arxiv-db

./: .gitignore  README.md  pyproject.toml
scripts/: download.bash  json2jl.bash
src/: db.py  main.py
